@@ -1,3 +1,8 @@
+Camlp5 Version 8.03.04:
+-----------------------
+
+* [20 Feb 2025] Still working on the Windows CI
+
 Camlp5 Version 8.03.03:
 --------------------
 
